fixed gradient boxes wrapping on iPad Safari

--- a/src/index.css
+++ b/src/index.css
@@ -135,11 +135,11 @@ section {
 
 	.gradient:nth-child(odd) {
 		margin-right: 24px;
-		max-width: calc(50% - 12px);
+		flex-basis: calc(50% - 12px);
 	}
 
 	.gradient:nth-child(even) {
-		max-width: calc(50% - 12px);
+		flex-basis: calc(50% - 12px);
 	}
 }
 
